<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="rating_placeholder">0.0</string>
    <string name="no_data">No data available</string>
    <string name="error_loading">Failed to load data. Please check your connection.</string>
    <string name="added_to_favorite">Added to favorites</string>
    <string name="removed_from_favorite">Removed from favorites</string>
    <string name="no_favorites">You have no favorite movies yet.</string>
    <string name="search_hint">Search movies…</string>
    <string name="no_search_results">No movies found for your search.</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="detail">Detail</string>
    <string name="overview">Overview</string>
    <string name="rating">Rating</string>
    <string name="release_date">Release Date</string>
    <string name="language">Language</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="remove_from_favorite">Remove from Favorite</string>
    <string name="backdrop_image">Movie Backdrop</string>
</resources>
